# fastai-lessons

./: .gitignore  README.md  build_image.sh  lesson5.ipynb  lesson6.ipynb  pyproject.toml  run.sh  venv.sh
images/: Containerfile.hello
lesson1/: app.py
lesson2/: lesson5.ipynb
lib/: lib.py
